parser.output
   0  $accept : %entry% $end

   1  lets : defs EOF

   2  defs :
   3       | def defs

   4  def : LET binding

   5  binding : rec_flag pattern EQUAL expr
   6          | rec_flag IDENT pattern_list EQUAL expr

   7  pattern : UNDERSCORE
   8          | IDENT
   9          | LPAREN pattern_comma_list RPAREN

  10  simple_expr : LPAREN expr RPAREN
  11              | const
  12              | IDENT
  13              | LPAREN expr_comma_list RPAREN
  14              | LBRACKET expr_semi_list RBRACKET

  15  expr : simple_expr
  16       | simple_expr simple_expr_list
  17       | expr COLONCOLON expr
  18       | LET binding IN expr
  19       | FUNCTION pattern MINUS_GT expr
  20       | IF expr THEN expr ELSE expr
  21       | MATCH expr WITH opt_bar LBRACKET RBRACKET MINUS_GT expr BAR pattern COLONCOLON pattern MINUS_GT expr
  22       | expr PLUS expr
  23       | expr PLUS_DOT expr
  24       | expr MINUS expr
  25       | expr MINUS_DOT expr
  26       | expr STAR expr
  27       | expr STAR_DOT expr
  28       | expr SLASH expr
  29       | expr SLASH_DOT expr
  30       | expr COMP expr
  31       | expr EQUAL expr
  32       | expr NEQ expr
  33       | expr AND expr
  34       | expr OR expr
  35       | MINUS expr
  36       | MINUS_DOT expr
  37       | NOT expr

  38  const : LPAREN RPAREN
  39        | CONST_BOOL
  40        | CONST_INT
  41        | CONST_FLOAT
  42        | CONST_STRING

  43  rec_flag :
  44           | REC

  45  opt_bar :
  46          | BAR

  47  simple_expr_list : simple_expr simple_expr_list
  48                   | simple_expr

  49  expr_comma_list : expr COMMA expr_comma_list
  50                  | expr COMMA expr

  51  expr_semi_list :
  52                 | expr
  53                 | expr SEMI expr_semi_list

  54  pattern_comma_list : pattern COMMA pattern_comma_list
  55                     | pattern COMMA pattern

  56  pattern_list : pattern pattern_list
  57               | pattern

  58  %entry% : '\001' lets

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . lets  (58)
	defs : .  (2)

	LET  shift 3
	EOF  reduce 2

	lets  goto 4
	defs  goto 5
	def  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	def : LET . binding  (4)
	rec_flag : .  (43)

	REC  shift 7
	IDENT  reduce 43
	LPAREN  reduce 43
	UNDERSCORE  reduce 43

	binding  goto 8
	rec_flag  goto 9


state 4
	%entry% : '\001' lets .  (58)

	.  reduce 58


state 5
	lets : defs . EOF  (1)

	EOF  shift 10
	.  error


state 6
	defs : def . defs  (3)
	defs : .  (2)

	LET  shift 3
	EOF  reduce 2

	defs  goto 11
	def  goto 6


state 7
	rec_flag : REC .  (44)

	.  reduce 44


state 8
	def : LET binding .  (4)

	.  reduce 4


state 9
	binding : rec_flag . pattern EQUAL expr  (5)
	binding : rec_flag . IDENT pattern_list EQUAL expr  (6)

	IDENT  shift 12
	LPAREN  shift 13
	UNDERSCORE  shift 14
	.  error

	pattern  goto 15


state 10
	lets : defs EOF .  (1)

	.  reduce 1


state 11
	defs : def defs .  (3)

	.  reduce 3


state 12
	binding : rec_flag IDENT . pattern_list EQUAL expr  (6)
	pattern : IDENT .  (8)

	IDENT  shift 16
	LPAREN  shift 13
	UNDERSCORE  shift 14
	EQUAL  reduce 8

	pattern  goto 17
	pattern_list  goto 18


state 13
	pattern : LPAREN . pattern_comma_list RPAREN  (9)

	IDENT  shift 16
	LPAREN  shift 13
	UNDERSCORE  shift 14
	.  error

	pattern  goto 19
	pattern_comma_list  goto 20


state 14
	pattern : UNDERSCORE .  (7)

	.  reduce 7


state 15
	binding : rec_flag pattern . EQUAL expr  (5)

	EQUAL  shift 21
	.  error


state 16
	pattern : IDENT .  (8)

	.  reduce 8


state 17
	pattern_list : pattern . pattern_list  (56)
	pattern_list : pattern .  (57)

	IDENT  shift 16
	LPAREN  shift 13
	UNDERSCORE  shift 14
	EQUAL  reduce 57

	pattern  goto 17
	pattern_list  goto 22


state 18
	binding : rec_flag IDENT pattern_list . EQUAL expr  (6)

	EQUAL  shift 23
	.  error


state 19
	pattern_comma_list : pattern . COMMA pattern_comma_list  (54)
	pattern_comma_list : pattern . COMMA pattern  (55)

	COMMA  shift 24
	.  error


state 20
	pattern : LPAREN pattern_comma_list . RPAREN  (9)

	RPAREN  shift 25
	.  error


state 21
	binding : rec_flag pattern EQUAL . expr  (5)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 40
	simple_expr  goto 41
	const  goto 42


state 22
	pattern_list : pattern pattern_list .  (56)

	.  reduce 56


state 23
	binding : rec_flag IDENT pattern_list EQUAL . expr  (6)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 43
	simple_expr  goto 41
	const  goto 42


state 24
	pattern_comma_list : pattern COMMA . pattern_comma_list  (54)
	pattern_comma_list : pattern COMMA . pattern  (55)

	IDENT  shift 16
	LPAREN  shift 13
	UNDERSCORE  shift 14
	.  error

	pattern  goto 44
	pattern_comma_list  goto 45


state 25
	pattern : LPAREN pattern_comma_list RPAREN .  (9)

	.  reduce 9


state 26
	const : CONST_BOOL .  (39)

	.  reduce 39


state 27
	const : CONST_INT .  (40)

	.  reduce 40


state 28
	const : CONST_FLOAT .  (41)

	.  reduce 41


state 29
	const : CONST_STRING .  (42)

	.  reduce 42


state 30
	expr : FUNCTION . pattern MINUS_GT expr  (19)

	IDENT  shift 16
	LPAREN  shift 13
	UNDERSCORE  shift 14
	.  error

	pattern  goto 46


state 31
	simple_expr : IDENT .  (12)

	.  reduce 12


state 32
	expr : IF . expr THEN expr ELSE expr  (20)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 47
	simple_expr  goto 41
	const  goto 42


state 33
	simple_expr : LBRACKET . expr_semi_list RBRACKET  (14)
	expr_semi_list : .  (51)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	RBRACKET  reduce 51

	expr  goto 48
	simple_expr  goto 41
	const  goto 42
	expr_semi_list  goto 49


state 34
	expr : LET . binding IN expr  (18)
	rec_flag : .  (43)

	REC  shift 7
	IDENT  reduce 43
	LPAREN  reduce 43
	UNDERSCORE  reduce 43

	binding  goto 50
	rec_flag  goto 9


state 35
	simple_expr : LPAREN . expr RPAREN  (10)
	simple_expr : LPAREN . expr_comma_list RPAREN  (13)
	const : LPAREN . RPAREN  (38)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	RPAREN  shift 51
	.  error

	expr  goto 52
	simple_expr  goto 41
	const  goto 42
	expr_comma_list  goto 53


state 36
	expr : MATCH . expr WITH opt_bar LBRACKET RBRACKET MINUS_GT expr BAR pattern COLONCOLON pattern MINUS_GT expr  (21)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 54
	simple_expr  goto 41
	const  goto 42


state 37
	expr : MINUS . expr  (35)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 55
	simple_expr  goto 41
	const  goto 42


state 38
	expr : MINUS_DOT . expr  (36)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 56
	simple_expr  goto 41
	const  goto 42


state 39
	expr : NOT . expr  (37)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 57
	simple_expr  goto 41
	const  goto 42


state 40
	binding : rec_flag pattern EQUAL expr .  (5)
	expr : expr . COLONCOLON expr  (17)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	AND  shift 58
	COLONCOLON  shift 59
	COMP  shift 60
	EQUAL  shift 61
	MINUS  shift 62
	MINUS_DOT  shift 63
	NEQ  shift 64
	OR  shift 65
	PLUS  shift 66
	PLUS_DOT  shift 67
	SLASH  shift 68
	SLASH_DOT  shift 69
	STAR  shift 70
	STAR_DOT  shift 71
	EOF  reduce 5
	IN  reduce 5
	LET  reduce 5


state 41
	expr : simple_expr .  (15)
	expr : simple_expr . simple_expr_list  (16)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	IDENT  shift 31
	LBRACKET  shift 33
	LPAREN  shift 35
	AND  reduce 15
	BAR  reduce 15
	COLONCOLON  reduce 15
	COMMA  reduce 15
	COMP  reduce 15
	ELSE  reduce 15
	EOF  reduce 15
	EQUAL  reduce 15
	IN  reduce 15
	LET  reduce 15
	MINUS  reduce 15
	MINUS_DOT  reduce 15
	NEQ  reduce 15
	OR  reduce 15
	PLUS  reduce 15
	PLUS_DOT  reduce 15
	RBRACKET  reduce 15
	RPAREN  reduce 15
	SEMI  reduce 15
	SLASH  reduce 15
	SLASH_DOT  reduce 15
	STAR  reduce 15
	STAR_DOT  reduce 15
	THEN  reduce 15
	WITH  reduce 15

	simple_expr  goto 72
	const  goto 42
	simple_expr_list  goto 73


state 42
	simple_expr : const .  (11)

	.  reduce 11


state 43
	binding : rec_flag IDENT pattern_list EQUAL expr .  (6)
	expr : expr . COLONCOLON expr  (17)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	AND  shift 58
	COLONCOLON  shift 59
	COMP  shift 60
	EQUAL  shift 61
	MINUS  shift 62
	MINUS_DOT  shift 63
	NEQ  shift 64
	OR  shift 65
	PLUS  shift 66
	PLUS_DOT  shift 67
	SLASH  shift 68
	SLASH_DOT  shift 69
	STAR  shift 70
	STAR_DOT  shift 71
	EOF  reduce 6
	IN  reduce 6
	LET  reduce 6


state 44
	pattern_comma_list : pattern . COMMA pattern_comma_list  (54)
	pattern_comma_list : pattern . COMMA pattern  (55)
	pattern_comma_list : pattern COMMA pattern .  (55)

	COMMA  shift 24
	RPAREN  reduce 55


state 45
	pattern_comma_list : pattern COMMA pattern_comma_list .  (54)

	.  reduce 54


state 46
	expr : FUNCTION pattern . MINUS_GT expr  (19)

	MINUS_GT  shift 74
	.  error


state 47
	expr : expr . COLONCOLON expr  (17)
	expr : IF expr . THEN expr ELSE expr  (20)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	AND  shift 58
	COLONCOLON  shift 59
	COMP  shift 60
	EQUAL  shift 61
	MINUS  shift 62
	MINUS_DOT  shift 63
	NEQ  shift 64
	OR  shift 65
	PLUS  shift 66
	PLUS_DOT  shift 67
	SLASH  shift 68
	SLASH_DOT  shift 69
	STAR  shift 70
	STAR_DOT  shift 71
	THEN  shift 75
	.  error


state 48
	expr : expr . COLONCOLON expr  (17)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	expr_semi_list : expr .  (52)
	expr_semi_list : expr . SEMI expr_semi_list  (53)

	AND  shift 58
	COLONCOLON  shift 59
	COMP  shift 60
	EQUAL  shift 61
	MINUS  shift 62
	MINUS_DOT  shift 63
	NEQ  shift 64
	OR  shift 65
	PLUS  shift 66
	PLUS_DOT  shift 67
	SEMI  shift 76
	SLASH  shift 68
	SLASH_DOT  shift 69
	STAR  shift 70
	STAR_DOT  shift 71
	RBRACKET  reduce 52


state 49
	simple_expr : LBRACKET expr_semi_list . RBRACKET  (14)

	RBRACKET  shift 77
	.  error


state 50
	expr : LET binding . IN expr  (18)

	IN  shift 78
	.  error


state 51
	const : LPAREN RPAREN .  (38)

	.  reduce 38


state 52
	simple_expr : LPAREN expr . RPAREN  (10)
	expr : expr . COLONCOLON expr  (17)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	expr_comma_list : expr . COMMA expr_comma_list  (49)
	expr_comma_list : expr . COMMA expr  (50)

	AND  shift 58
	COLONCOLON  shift 59
	COMMA  shift 79
	COMP  shift 60
	EQUAL  shift 61
	MINUS  shift 62
	MINUS_DOT  shift 63
	NEQ  shift 64
	OR  shift 65
	PLUS  shift 66
	PLUS_DOT  shift 67
	RPAREN  shift 80
	SLASH  shift 68
	SLASH_DOT  shift 69
	STAR  shift 70
	STAR_DOT  shift 71
	.  error


state 53
	simple_expr : LPAREN expr_comma_list . RPAREN  (13)

	RPAREN  shift 81
	.  error


state 54
	expr : expr . COLONCOLON expr  (17)
	expr : MATCH expr . WITH opt_bar LBRACKET RBRACKET MINUS_GT expr BAR pattern COLONCOLON pattern MINUS_GT expr  (21)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	AND  shift 58
	COLONCOLON  shift 59
	COMP  shift 60
	EQUAL  shift 61
	MINUS  shift 62
	MINUS_DOT  shift 63
	NEQ  shift 64
	OR  shift 65
	PLUS  shift 66
	PLUS_DOT  shift 67
	SLASH  shift 68
	SLASH_DOT  shift 69
	STAR  shift 70
	STAR_DOT  shift 71
	WITH  shift 82
	.  error


state 55
	expr : expr . COLONCOLON expr  (17)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	expr : MINUS expr .  (35)

	.  reduce 35


state 56
	expr : expr . COLONCOLON expr  (17)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	expr : MINUS_DOT expr .  (36)

	.  reduce 36


state 57
	expr : expr . COLONCOLON expr  (17)
	expr : expr . PLUS expr  (22)
	expr : expr . PLUS_DOT expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . MINUS_DOT expr  (25)
	expr : expr . STAR expr  (26)
	expr : expr . STAR_DOT expr  (27)
	expr : expr . SLASH expr  (28)
	expr : expr . SLASH_DOT expr  (29)
	expr : expr . COMP expr  (30)
	expr : expr . EQUAL expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	expr : NOT expr .  (37)

	.  reduce 37


state 58
	expr : expr AND . expr  (33)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 83
	simple_expr  goto 41
	const  goto 42


state 59
	expr : expr COLONCOLON . expr  (17)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 84
	simple_expr  goto 41
	const  goto 42


state 60
	expr : expr COMP . expr  (30)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 85
	simple_expr  goto 41
	const  goto 42


state 61
	expr : expr EQUAL . expr  (31)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 86
	simple_expr  goto 41
	const  goto 42


state 62
	expr : expr MINUS . expr  (24)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 87
	simple_expr  goto 41
	const  goto 42


state 63
	expr : expr MINUS_DOT . expr  (25)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 88
	simple_expr  goto 41
	const  goto 42


state 64
	expr : expr NEQ . expr  (32)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 89
	simple_expr  goto 41
	const  goto 42


state 65
	expr : expr OR . expr  (34)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 90
	simple_expr  goto 41
	const  goto 42


state 66
	expr : expr PLUS . expr  (22)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 91
	simple_expr  goto 41
	const  goto 42


state 67
	expr : expr PLUS_DOT . expr  (23)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 92
	simple_expr  goto 41
	const  goto 42


state 68
	expr : expr SLASH . expr  (28)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 93
	simple_expr  goto 41
	const  goto 42


state 69
	expr : expr SLASH_DOT . expr  (29)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 94
	simple_expr  goto 41
	const  goto 42


state 70
	expr : expr STAR . expr  (26)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 95
	simple_expr  goto 41
	const  goto 42


state 71
	expr : expr STAR_DOT . expr  (27)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 96
	simple_expr  goto 41
	const  goto 42


state 72
	simple_expr_list : simple_expr . simple_expr_list  (47)
	simple_expr_list : simple_expr .  (48)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	IDENT  shift 31
	LBRACKET  shift 33
	LPAREN  shift 35
	AND  reduce 48
	BAR  reduce 48
	COLONCOLON  reduce 48
	COMMA  reduce 48
	COMP  reduce 48
	ELSE  reduce 48
	EOF  reduce 48
	EQUAL  reduce 48
	IN  reduce 48
	LET  reduce 48
	MINUS  reduce 48
	MINUS_DOT  reduce 48
	NEQ  reduce 48
	OR  reduce 48
	PLUS  reduce 48
	PLUS_DOT  reduce 48
	RBRACKET  reduce 48
	RPAREN  reduce 48
	SEMI  reduce 48
	SLASH  reduce 48
	SLASH_DOT  reduce 48
	STAR  reduce 48
	STAR_DOT  reduce 48
	THEN  reduce 48
	WITH  reduce 48

	simple_expr  goto 72
	const  goto 42
	simple_expr_list  goto 97


state 73
	expr : simple_expr simple_expr_list .  (16)

	.  reduce 16


state 74
	expr : FUNCTION pattern MINUS_GT . expr  (19)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 98
	simple_expr  goto 41
	const  goto 42


state 75
	expr : IF expr THEN . expr ELSE expr  (20)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	.  error

	expr  goto 99
	simple_expr  goto 41
	const  goto 42


state 76
	expr_semi_list : expr SEMI . expr_semi_list  (53)
	expr_semi_list : .  (51)

	CONST_BOOL  shift 26
	CONST_INT  shift 27
	CONST_FLOAT  shift 28
	CONST_STRING  shift 29
	FUNCTION  shift 30
	IDENT  shift 31
	IF  shift 32
	LBRACKET  shift 33
	LET  shift 34
	LPAREN  shift 35
	MATCH  shift 36
	MINUS  shift 37
	MINUS_DOT  shift 38
	NOT  shift 39
	RBRACKET  reduce 51

	expr  goto 48
	simple_expr  goto 41
	const  goto 42
	expr_semi_list  goto 100


state 77
	simple_expr : LBRACKET expr_semi_list RBRACKET .  (14)

	.  reduce 14


state 78
	expr : LET binding IN . expr  (18)
